rc/y.output

state 0
	$accept: .rc $end 
	rc: .    (1)

	token_bang  shift 11
	token_word  shift 19
	kywd_for  shift 15
	kywd_while  shift 7
	kywd_if  shift 8
	kywd_not  shift 9
	kywd_twiddle  shift 10
	kywd_subshell  shift 12
	kywd_switch  shift 13
	kywd_fn  shift 16
	.  reduce 1 (src line 52)

	cmd  goto 3
	cmdsa  goto 4
	line  goto 2
	for  goto 5
	fn  goto 6
	assign  goto 14
	comword  goto 18
	first  goto 17
	rc  goto 1

state 1
	$accept:  rc.$end 

	$end  accept
	.  error


state 2
	rc:  line.token_eol 

	token_eol  shift 20
	.  error


state 3
	line:  cmd.    (3)
	cmdsa:  cmd.token_semi 
	cmdsa:  cmd.token_amp 

	token_semi  shift 21
	token_amp  shift 22
	.  reduce 3 (src line 58)


state 4
	line:  cmdsa.line 

	token_bang  shift 11
	token_word  shift 19
	kywd_for  shift 15
	kywd_while  shift 7
	kywd_if  shift 8
	kywd_not  shift 9
	kywd_twiddle  shift 10
	kywd_subshell  shift 12
	kywd_switch  shift 13
	kywd_fn  shift 16
	.  error

	cmd  goto 3
	cmdsa  goto 4
	line  goto 23
	for  goto 5
	fn  goto 6
	assign  goto 14
	comword  goto 18
	first  goto 17

state 5
	cmd:  for.    (8)

	.  reduce 8 (src line 74)


state 6
	cmd:  fn.    (9)

	.  reduce 9 (src line 76)


state 7
	cmd:  kywd_while.    (10)

	.  reduce 10 (src line 77)


state 8
	cmd:  kywd_if.    (11)

	.  reduce 11 (src line 78)


state 9
	cmd:  kywd_not.    (12)

	.  reduce 12 (src line 79)


state 10
	cmd:  kywd_twiddle.    (13)

	.  reduce 13 (src line 80)


state 11
	cmd:  token_bang.    (14)

	.  reduce 14 (src line 81)


state 12
	cmd:  kywd_subshell.    (15)

	.  reduce 15 (src line 82)


state 13
	cmd:  kywd_switch.    (16)

	.  reduce 16 (src line 83)


state 14
	cmd:  assign.    (17)

	.  reduce 17 (src line 84)


state 15
	for:  kywd_for.token_open_paren word token_closed_paren cmd 
	for:  kywd_for.token_open_paren word kywd_in words token_closed_paren cmd 

	token_open_paren  shift 24
	.  error


state 16
	fn:  kywd_fn.words brace 
	fn:  kywd_fn.words 

	token_word  shift 19
	.  error

	comword  goto 27
	word  goto 26
	words  goto 25

state 17
	assign:  first.token_eq word 
	first:  first.token_caret word 

	token_eq  shift 28
	token_caret  shift 29
	.  error


state 18
	first:  comword.    (6)

	.  reduce 6 (src line 70)


state 19
	comword:  token_word.    (24)

	.  reduce 24 (src line 108)


state 20
	rc:  line token_eol.    (2)

	.  reduce 2 (src line 54)


state 21
	cmdsa:  cmd token_semi.    (29)

	.  reduce 29 (src line 127)


state 22
	cmdsa:  cmd token_amp.    (30)

	.  reduce 30 (src line 129)


state 23
	line:  cmdsa line.    (4)

	.  reduce 4 (src line 60)


state 24
	for:  kywd_for token_open_paren.word token_closed_paren cmd 
	for:  kywd_for token_open_paren.word kywd_in words token_closed_paren cmd 

	token_word  shift 19
	.  error

	comword  goto 27
	word  goto 30

state 25
	fn:  kywd_fn words.brace 
	fn:  kywd_fn words.    (22)
	words:  words.word 

	token_open_brace  shift 33
	token_word  shift 19
	.  reduce 22 (src line 100)

	brace  goto 31
	comword  goto 27
	word  goto 32

state 26
	words:  word.    (27)

	.  reduce 27 (src line 121)


state 27
	word:  comword.    (23)

	.  reduce 23 (src line 105)


state 28
	assign:  first token_eq.word 

	token_word  shift 19
	.  error

	comword  goto 27
	word  goto 34

state 29
	first:  first token_caret.word 

	token_word  shift 19
	.  error

	comword  goto 27
	word  goto 35

state 30
	for:  kywd_for token_open_paren word.token_closed_paren cmd 
	for:  kywd_for token_open_paren word.kywd_in words token_closed_paren cmd 

	token_closed_paren  shift 36
	kywd_in  shift 37
	.  error


state 31
	fn:  kywd_fn words brace.    (21)

	.  reduce 21 (src line 95)


state 32
	words:  words word.    (28)

	.  reduce 28 (src line 123)


state 33
	brace:  token_open_brace.body token_closed_brace 

	token_bang  shift 11
	token_word  shift 19
	kywd_for  shift 15
	kywd_while  shift 7
	kywd_if  shift 8
	kywd_not  shift 9
	kywd_twiddle  shift 10
	kywd_subshell  shift 12
	kywd_switch  shift 13
	kywd_fn  shift 16
	.  error

	cmd  goto 39
	cmdsa  goto 41
	for  goto 5
	fn  goto 6
	body  goto 38
	cmdsan  goto 40
	assign  goto 14
	comword  goto 18
	first  goto 17

state 34
	assign:  first token_eq word.    (5)

	.  reduce 5 (src line 65)


state 35
	first:  first token_caret word.    (7)

	.  reduce 7 (src line 72)


state 36
	for:  kywd_for token_open_paren word token_closed_paren.cmd 

	token_bang  shift 11
	token_word  shift 19
	kywd_for  shift 15
	kywd_while  shift 7
	kywd_if  shift 8
	kywd_not  shift 9
	kywd_twiddle  shift 10
	kywd_subshell  shift 12
	kywd_switch  shift 13
	kywd_fn  shift 16
	.  error

	cmd  goto 42
	for  goto 5
	fn  goto 6
	assign  goto 14
	comword  goto 18
	first  goto 17

state 37
	for:  kywd_for token_open_paren word kywd_in.words token_closed_paren cmd 

	token_word  shift 19
	.  error

	comword  goto 27
	word  goto 26
	words  goto 43

state 38
	brace:  token_open_brace body.token_closed_brace 

	token_closed_brace  shift 44
	.  error


state 39
	body:  cmd.    (19)
	cmdsa:  cmd.token_semi 
	cmdsa:  cmd.token_amp 
	cmdsan:  cmd.token_eol 

	token_eol  shift 45
	token_semi  shift 21
	token_amp  shift 22
	.  reduce 19 (src line 91)


state 40
	body:  cmdsan.body 

	token_bang  shift 11
	token_word  shift 19
	kywd_for  shift 15
	kywd_while  shift 7
	kywd_if  shift 8
	kywd_not  shift 9
	kywd_twiddle  shift 10
	kywd_subshell  shift 12
	kywd_switch  shift 13
	kywd_fn  shift 16
	.  error

	cmd  goto 39
	cmdsa  goto 41
	for  goto 5
	fn  goto 6
	body  goto 46
	cmdsan  goto 40
	assign  goto 14
	comword  goto 18
	first  goto 17

state 41
	cmdsan:  cmdsa.    (31)

	.  reduce 31 (src line 131)


state 42
	for:  kywd_for token_open_paren word token_closed_paren cmd.    (25)

	.  reduce 25 (src line 111)


state 43
	for:  kywd_for token_open_paren word kywd_in words.token_closed_paren cmd 
	words:  words.word 

	token_closed_paren  shift 47
	token_word  shift 19
	.  error

	comword  goto 27
	word  goto 32

state 44
	brace:  token_open_brace body token_closed_brace.    (18)

	.  reduce 18 (src line 86)


state 45
	cmdsan:  cmd token_eol.    (32)

	.  reduce 32 (src line 133)


state 46
	body:  cmdsan body.    (20)

	.  reduce 20 (src line 93)


state 47
	for:  kywd_for token_open_paren word kywd_in words token_closed_paren.cmd 

	token_bang  shift 11
	token_word  shift 19
	kywd_for  shift 15
	kywd_while  shift 7
	kywd_if  shift 8
	kywd_not  shift 9
	kywd_twiddle  shift 10
	kywd_subshell  shift 12
	kywd_switch  shift 13
	kywd_fn  shift 16
	.  error

	cmd  goto 48
	for  goto 5
	fn  goto 6
	assign  goto 14
	comword  goto 18
	first  goto 17

state 48
	for:  kywd_for token_open_paren word kywd_in words token_closed_paren cmd.    (26)

	.  reduce 26 (src line 116)


23 terminals, 15 nonterminals
33 grammar rules, 49/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
64 working sets used
memory: parser 80/30000
32 extra closures
81 shift entries, 1 exceptions
34 goto entries
30 entries saved by goto default
Optimizer space used: output 61/30000
61 table entries, 0 zero
maximum spread: 23, maximum offset: 47
